--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   cloud_functions:
   firebase_database:
   charts_flutter:
+  path_provider:
+  intl:
 
 dev_dependencies:
   flutter_test:
